--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
+# Python
 __pycache__/
-venv/
+*.py[cod]
+*$py.class
+*.so
 
+# Virtual Environment
+venv/
+ENV/
+env/
+
+# Jupyter Notebook
+.ipynb_checkpoints/
+*/.ipynb_checkpoints/*
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.claude/
+
+# OS
+.DS_Store
+Thumbs.db
